Enabled preview features so Records can be used.