@@ -7,4 +7,4 @@ FROM openjdk:14.0.1-slim
 COPY --from=build /usr/src/app/target/word-crash-0.0.1-SNAPSHOT.jar /usr/app/run.jar
 ENV SERVER_PORT=80
 EXPOSE 80
-ENTRYPOINT ["java","-jar","/usr/app/run.jar"]
+ENTRYPOINT ["java","--enable-preview","-jar","/usr/app/run.jar"]
